# lns-ml

./: .gitignore  Cargo.toml  LICENSE  LNS-vs-GGML-Mathematical-Analysis.md  README.md  Spec.md  TODO.md  lns-ml-math-spec.md  lns-ml-whitepaper.md  progress.md
.copilot/tasks/: lns-math-spec.md  qwen35-text-runtime.md
lns-cli/: Cargo.toml
lns-cli/src/: main.rs
lns-cli/tests/: smoke_cli.rs
lns-convert/: Cargo.toml
lns-convert/src/: input.rs  main.rs  test_bin.rs
lns-convert/tests/: qwen3_convert.rs
lns-core/: Cargo.toml
lns-core/src/: error.rs  format.rs  lib.rs
lns-core/src/quant/: hq.rs  mod.rs  q2l.rs  q4l.rs  q8l.rs
lns-core/tests/: roundtrip.rs
lns-cuda/: Cargo.toml
lns-cuda/src/: lib.rs
lns-inference/: Cargo.toml
lns-inference/src/: compat.rs  engine.rs  lib.rs  model_config.rs  sampler.rs  tokenizer.rs  transformer.rs
lns-metal/: Cargo.toml
lns-metal/src/: lib.rs
lns-metal/src/shaders/: lns_decode.metal  q4l_decode.metal
lns-metal/tests/: aux_kernels.rs  consistency.rs
lns-rocm/: Cargo.toml
lns-rocm/src/: lib.rs
lns-spirv/: Cargo.toml
lns-spirv/src/: lib.rs
