[package]
name = "lns-core"
description = "LNS quantization format, encoding/decoding, and rkyv model schema"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
half = { workspace = true }
bytemuck = { workspace = true }
rkyv = { workspace = true }
thiserror = { workspace = true }
